Nova migração, adicionando SeedingService para popular o banco pela aplicação, e feito o Crud de Department

--- a/WebSalesMVC/Views/Departments/Index.cshtml
+++ b/WebSalesMVC/Views/Departments/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebSalesMVC.Models.Deparment>
+﻿@model IEnumerable<WebSalesMVC.Models.Department>
 
 @{
     ViewData["Title"] = "Index";
