--- a/WebSalesMVC/Views/Departments/Delete.cshtml
+++ b/WebSalesMVC/Views/Departments/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebSalesMVC.Models.Deparment
+﻿@model WebSalesMVC.Models.Department
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Deparment</h4>
+    <h4>Department</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
