Add using ViewModels , controller Sellers e View

--- a/WebSalesMVC/Views/_ViewImports.cshtml
+++ b/WebSalesMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WebSalesMVC
+﻿@using WebSalesMVC.Models.ViewModels 
 @using WebSalesMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
