--- a/WebSalesMVC/Views/Sellers/Create.cshtml
+++ b/WebSalesMVC/Views/Sellers/Create.cshtml
@@ -6,9 +6,13 @@
 <p>@ViewData["Title"]</p>
 
 <form asp-action="Create" class="col-md-6">
+    <partial name="_ValidationScriptsPartial" />
+    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+
     <div class="form-group">
         <label asp-for="Seller.Name" class="control-label"></label>
         <input asp-for="Seller.Name" class="form-control" />
+        <span asp-validation-for="Seller.Name"></span>
     </div>
     <div class="form-group">
         <label asp-for="Seller.Email" class="control-label"></label>
@@ -25,10 +29,16 @@
     <div class="form-group">
         <label asp-for="Seller.DepartmentId" class="control-label"></label>
         <select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments, "Id", "Name"))"
-        class="form-control"></select>
+                class="form-control"></select>
     </div>
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-outline-primary" />
     </div>
 
 </form>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
